Bug 45534 - [4.6 Regression] ICE in refs_may_alias_p_1, at tree-ssa-alias.c:1031
Summary: [4.6 Regression] ICE in refs_may_alias_p_1, at tree-ssa-alias.c:1031
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: middle-end (show other bugs)
Version: 4.6.0
: P3 normal
Target Milestone: 4.6.0
Assignee: Richard Biener
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-04 11:54 UTC by Dominique d'Humieres
Modified: 2010-09-07 09:12 UTC (History)
2 users (show)

See Also:
Host: x86_64-apple-darwin10
Target: x86_64-apple-darwin10
Build: x86_64-apple-darwin10
Known to work:
Known to fail:
Last reconfirmed: 2010-09-06 11:06:14


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dominique d'Humieres 2010-09-04 11:54:29 UTC
From revisions 163847 (163744 works) to 163859, I see the following ICEs

with both -m32 and -m64

libgomp.graphite/force-parallel-3.c:5:6: internal compiler error: in refs_may_alias_p_1, at tree-ssa-alias.c:1031
libgomp.graphite/force-parallel-9.c:5:6: internal compiler error: in refs_may_alias_p_1, at tree-ssa-alias.c:1031

with -m64 -Os

gfortran.dg/backspace_1.f:82:0: internal compiler error: in refs_may_alias_p_1, at tree-ssa-alias.c:1031
gfortran.dg/record_marker_2.f:83:0: internal compiler error: in refs_may_alias_p_1, at tree-ssa-alias.c:1031
libgomp.fortran/appendix-a/a.16.1.f90:26:0: internal compiler error: in refs_may_alias_p_1, at tree-ssa-alias.c:1031
libgomp.fortran/omp_atomic2.f90:35:0: internal compiler error: in refs_may_alias_p_1, at tree-ssa-alias.c:1031

and with -m64 -O2 -fgraphite-identity

gfortran.dg/graphite/pr42393-1.f90:6:0: internal compiler error: in refs_may_alias_p_1, at tree-ssa-alias.c:1031
Comment 1 Richard Biener 2010-09-05 11:43:12 UTC
I can't see any of those on x86_64-linux, neither with -m32 nor with -m64.
Comment 2 Dominique d'Humieres 2010-09-05 13:08:14 UTC
> I can't see any of those on x86_64-linux, neither with -m32 nor with -m64.

See also http://gcc.gnu.org/ml/gcc-testresults/2010-09/msg00410.html .
Comment 3 Dominique d'Humieres 2010-09-05 13:44:24 UTC
I also get the same ICE on powerpc-apple-darwin9 at revision 163836:

[karma] f90/bug% /opt/gcc/gcc4.6w/bin/gcc -O3 /opt/gcc/_gcc_clean/gcc/testsuite/gcc.dg/vect/vect-multitypes-1.c
/opt/gcc/_gcc_clean/gcc/testsuite/gcc.dg/vect/vect-multitypes-1.c: In function 'main1':
/opt/gcc/_gcc_clean/gcc/testsuite/gcc.dg/vect/vect-multitypes-1.c:41:1: internal compiler error: in refs_may_alias_p_1, at tree-ssa-alias.c:1031

and gcc/testsuite/gcc.dg/vect/vect-multitypes-4.c (see also r163798 passes http://gcc.gnu.org/ml/gcc-testresults/2010-09/msg00273.html and r163836 fails http://gcc.gnu.org/ml/gcc-testresults/2010-09/msg00313.html ).
Comment 4 Richard Biener 2010-09-05 13:45:47 UTC
That doesn't help me to reproduce the issue.  Please provide output of appending
-v to the compiler command-line (this must be reproducable on x86_64 with
appropriate flags).
Comment 5 Dominique d'Humieres 2010-09-05 13:58:06 UTC
> Please provide output of appending -v to the compiler command-line

The configure options 
[macbook] gcc/p_build% gfcp -v
Using built-in specs.
COLLECT_GCC=gfcp
COLLECT_LTO_WRAPPER=/opt/gcc/gcc4.6p/libexec/gcc/x86_64-apple-darwin10/4.6.0/lto-wrapper
Target: x86_64-apple-darwin10
Configured with: ../p_work/configure --prefix=/opt/gcc/gcc4.6p --mandir=/opt/gcc/gcc4.6p/share/man --infodir=/opt/gcc/gcc4.6p/share/info --build=x86_64-apple-darwin10 --host=x86_64-apple-darwin10 --target=x86_64-apple-darwin10 --enable-languages=c,lto,fortran --with-gmp=/opt/sw64 --with-libiconv-prefix=/opt/sw64 --with-system-zlib --x-includes=/usr/X11R6/include --x-libraries=/usr/X11R6/lib --with-cloog=/opt/sw64 --with-ppl=/opt/sw64 --with-mpc=/opt/sw64 --enable-checking=release --with-quad=/opt/sw64 --disable-decimal-float
Thread model: posix
gcc version 4.6.0 20100903 (experimental) [trunk revision 163800p1] (GCC) 

works, building revision 163820.

The other configure options can be found in the links in comment #2 and #3.
Comment 6 Richard Biener 2010-09-05 14:01:26 UTC
(In reply to comment #5)
> > Please provide output of appending -v to the compiler command-line
> 
> The configure options 
> [macbook] gcc/p_build% gfcp -v
> Using built-in specs.
> COLLECT_GCC=gfcp
> COLLECT_LTO_WRAPPER=/opt/gcc/gcc4.6p/libexec/gcc/x86_64-apple-darwin10/4.6.0/lto-wrapper
> Target: x86_64-apple-darwin10
> Configured with: ../p_work/configure --prefix=/opt/gcc/gcc4.6p
> --mandir=/opt/gcc/gcc4.6p/share/man --infodir=/opt/gcc/gcc4.6p/share/info
> --build=x86_64-apple-darwin10 --host=x86_64-apple-darwin10
> --target=x86_64-apple-darwin10 --enable-languages=c,lto,fortran
> --with-gmp=/opt/sw64 --with-libiconv-prefix=/opt/sw64 --with-system-zlib
> --x-includes=/usr/X11R6/include --x-libraries=/usr/X11R6/lib
> --with-cloog=/opt/sw64 --with-ppl=/opt/sw64 --with-mpc=/opt/sw64
> --enable-checking=release --with-quad=/opt/sw64 --disable-decimal-float
> Thread model: posix
> gcc version 4.6.0 20100903 (experimental) [trunk revision 163800p1] (GCC) 
> 
> works, building revision 163820.
> 
> The other configure options can be found in the links in comment #2 and #3.

-v for one failing testcase - I want to see what standard -march/tune
your config uses.
Comment 7 Iain Sandoe 2010-09-05 14:24:11 UTC
(In reply to comment #6)
> (In reply to comment #5)
 
> -v for one failing testcase - I want to see what standard -march/tune
> your config uses.

we default to generic 
(FWIW, the same fail occurs also for me on i686-darwin9 with -mtune=core2).

$  /GCC/gcc-4-6-reghunt-build/gcc/xgcc -B/GCC/gcc-4-6-reghunt-build/gcc/ /GCC/gcc-4-6-reghunt/libgomp/testsuite/libgomp.fortran/appendix-a/a.16.1.f90  -B/GCC/gcc-4-6-reghunt-build/i686-apple-darwin9/x86_64/libgomp/ -B/GCC/gcc-4-6-reghunt-build/i686-apple-darwin9/x86_64/libgomp/.libs -I/GCC/gcc-4-6-reghunt-build/i686-apple-darwin9/x86_64/libgomp -I/GCC/gcc-4-6-reghunt/libgomp/testsuite/.. -shared-libgcc -fmessage-length=0 -fopenmp  -Os   -B/GCC/gcc-4-6-reghunt-build/i686-apple-darwin9/x86_64/libgomp/../libgfortran/.libs   -L/GCC/gcc-4-6-reghunt-build/i686-apple-darwin9/x86_64/libgomp/.libs -lgomp -L/GCC/gcc-4-6-reghunt-build/i686-apple-darwin9/x86_64/libgomp/../libgfortran/.libs -lgfortran -lm   -m64 -o ./a.16.1.exe -v
Reading specs from /GCC/gcc-4-6-reghunt-build/gcc/specs
COLLECT_GCC=/GCC/gcc-4-6-reghunt-build/gcc/xgcc
COLLECT_LTO_WRAPPER=/GCC/gcc-4-6-reghunt-build/gcc/lto-wrapper
Target: i686-apple-darwin9
Configured with: ../gcc-4-6-reghunt/configure --prefix=/GCC/tobjc --target=i686-apple-darwin9 --host=i686-apple-darwin9 --build=i686-apple-darwin9 --enable-version-specific-runtime-libs --enable-threads --enable-checking=yes --program-suffix=-4.6rh --with-libiconv-prefix=/usr --with-system-zlib --enable-languages=c,fortran CC=gcc-4.2 CXX=g++-4.2
Thread model: posix
gcc version 4.6.0 20100905 (experimental) [trunk revision 163877] (GCC) 
COLLECT_GCC_OPTIONS='-mmacosx-version-min=10.5.8' '-B' '/GCC/gcc-4-6-reghunt-build/gcc/' '-B' '/GCC/gcc-4-6-reghunt-build/i686-apple-darwin9/x86_64/libgomp/' '-B' '/GCC/gcc-4-6-reghunt-build/i686-apple-darwin9/x86_64/libgomp/.libs' '-I' '/GCC/gcc-4-6-reghunt-build/i686-apple-darwin9/x86_64/libgomp' '-I' '/GCC/gcc-4-6-reghunt/libgomp/testsuite/..' '-shared-libgcc' '-fmessage-length=0' '-fopenmp' '-Os' '-B' '/GCC/gcc-4-6-reghunt-build/i686-apple-darwin9/x86_64/libgomp/../libgfortran/.libs' '-L/GCC/gcc-4-6-reghunt-build/i686-apple-darwin9/x86_64/libgomp/.libs' '-L/GCC/gcc-4-6-reghunt-build/i686-apple-darwin9/x86_64/libgomp/../libgfortran/.libs' '-m64' '-o' './a.16.1.exe' '-v' '-mtune=generic'
 /GCC/gcc-4-6-reghunt-build/gcc/f951 /GCC/gcc-4-6-reghunt/libgomp/testsuite/libgomp.fortran/appendix-a/a.16.1.f90 -I /GCC/gcc-4-6-reghunt-build/i686-apple-darwin9/x86_64/libgomp -I /GCC/gcc-4-6-reghunt/libgomp/testsuite/.. -fPIC -quiet -dumpbase a.16.1.f90 -mmacosx-version-min=10.5.8 -m64 -mtune=generic -auxbase a.16.1 -Os -version -fmessage-length=0 -fopenmp -fintrinsic-modules-path finclude -o /var/folders/OW/OW-PGOtgHbKakssxFpJpkU++-0E/-Tmp-//cc74lrzb.s
GNU Fortran (GCC) version 4.6.0 20100905 (experimental) [trunk revision 163877] (i686-apple-darwin9)
        compiled by GNU C version 4.6.0 20100905 (experimental) [trunk revision 163877], GMP version 4.3.2, MPFR version 2.4.2, MPC version 0.8.1
GGC heuristics: --param ggc-min-expand=30 --param ggc-min-heapsize=4096
GNU Fortran (GCC) version 4.6.0 20100905 (experimental) [trunk revision 163877] (i686-apple-darwin9)
        compiled by GNU C version 4.6.0 20100905 (experimental) [trunk revision 163877], GMP version 4.3.2, MPFR version 2.4.2, MPC version 0.8.1
GGC heuristics: --param ggc-min-expand=30 --param ggc-min-heapsize=4096
/GCC/gcc-4-6-reghunt/libgomp/testsuite/libgomp.fortran/appendix-a/a.16.1.f90: In function ‘a16’:
/GCC/gcc-4-6-reghunt/libgomp/testsuite/libgomp.fortran/appendix-a/a.16.1.f90:26:0: internal compiler error: in refs_may_alias_p_1, at tree-ssa-alias.c:1040
Please submit a full bug report,
with preprocessed source if appropriate.
See <http://gcc.gnu.org/bugs.html> for instructions.

Comment 8 Dominique d'Humieres 2010-09-05 14:30:28 UTC
The ICEs appeared between 163800 (working) and 163820 (ICE).
Comment 9 Dominique d'Humieres 2010-09-05 16:15:26 UTC
The ICEs are due to revision 163802.
Comment 10 Dominique d'Humieres 2010-09-05 16:26:11 UTC
Apparently this pr does not show up for i686-apple-darwin9 (see http://gcc.gnu.org/ml/gcc-testresults/2010-09/msg00452.html ).
Comment 11 Dominique d'Humieres 2010-09-05 16:28:51 UTC
The ICEs in comment #3 also show up for powerpc64-unknown-linux-gnu (see http://gcc.gnu.org/ml/gcc-testresults/2010-09/msg00417.html ).
Comment 12 Iain Sandoe 2010-09-05 16:46:50 UTC
(In reply to comment #10)
> Apparently this pr does not show up for i686-apple-darwin9 (see
> http://gcc.gnu.org/ml/gcc-testresults/2010-09/msg00452.html ).

it does at m64 see c#7

Comment 13 Richard Biener 2010-09-06 11:06:14 UTC
Ok, I reproduced a failure (but none of the kind reported here) and have a fix
for that issue.  Maybe it fixes this bug too, which I still can't reproduce.
Comment 14 Richard Biener 2010-09-06 12:15:21 UTC
Subject: Bug 45534

Author: rguenth
Date: Mon Sep  6 12:14:02 2010
New Revision: 163913

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=163913
Log:
2010-09-06  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/45534
	* tree-ssa-address.c (create_mem_ref_raw): Add verify parameter.
	(create_mem_ref): Do verify the created TARGET_MEM_REF is valid
	on the target.
	(maybe_fold_tmr): Do not verify the created TARGET_MEM_REF is
	valid on the target.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/tree-ssa-address.c

Comment 15 Iain Sandoe 2010-09-06 18:07:44 UTC
(In reply to comment #14)
> Subject: Bug 45534

> New Revision: 163913

> 2010-09-06  Richard Guenther  <rguenther@suse.de>
> 
>         PR tree-optimization/45534
>         * tree-ssa-address.c (create_mem_ref_raw): Add verify parameter.
>         (create_mem_ref): Do verify the created TARGET_MEM_REF is valid
>         on the target.
>         (maybe_fold_tmr): Do not verify the created TARGET_MEM_REF is
>         valid on the target.

fixed on i686-darwin9.
Comment 16 Dominique d'Humieres 2010-09-06 18:27:06 UTC
> > New Revision: 163913
>  fixed on i686-darwin9.

also on x86_64-apple-darwin10.4 configured with --enable-checking=release.
Comment 17 Dominique d'Humieres 2010-09-07 09:12:31 UTC
Also fixed on x86_64-apple-darwin10.4, trunk configured with the default value for --enable-checking, see
http://gcc.gnu.org/ml/gcc-testresults/2010-09/msg00616.html

The failures on ppc reported in comment #3 have also been fixed, see
http://gcc.gnu.org/ml/gcc-testresults/2010-09/msg00613.html .

Closing as fixed.